logs/liquid4m.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/liquid4m'...
Listing './lib/python3.5/site-packages/liquid4m/fields'...
Compiling './lib/python3.5/site-packages/liquid4m/fields/__init__.py'...
***   File "./lib/python3.5/site-packages/liquid4m/fields/__init__.py", line 100
    except exceptions.ValidationError, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/liquid4m/fields/validators.py'...
***   File "./lib/python3.5/site-packages/liquid4m/fields/validators.py", line 431
    except ValidationError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/liquid4m/fieldsets'...
Compiling './lib/python3.5/site-packages/liquid4m/fieldsets/__init__.py'...
***   File "./lib/python3.5/site-packages/liquid4m/fieldsets/__init__.py", line 142
    except exceptions.ValidationError, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/liquid4m/validators.py'...
***   File "./lib/python3.5/site-packages/liquid4m/validators.py", line 282
    except ValidationError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/liquid4m-0.1.dev0.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/phonenumbers'...
Listing './lib/python3.5/site-packages/phonenumbers/carrierdata'...
Listing './lib/python3.5/site-packages/phonenumbers/data'...
Listing './lib/python3.5/site-packages/phonenumbers/geodata'...
Listing './lib/python3.5/site-packages/phonenumbers/shortdata'...
Listing './lib/python3.5/site-packages/phonenumbers/tzdata'...
Listing './lib/python3.5/site-packages/phonenumbers-8.8.9.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/validate_email-1.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
